(fix): rich embed doesn't show the whole title when it gets wrapped (#655)

--- a/src/app/common/components/rich-embed/rich-embed.scss
+++ b/src/app/common/components/rich-embed/rich-embed.scss
@@ -82,8 +82,4 @@ minds-rich-embed {
       box-sizing: border-box;
     }
   }
-
-  .m-rich-embed--title {
-    overflow: hidden;
-  }
 }
